--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
 remote_theme: hydecorp/hydejack@v9.1.4
 plugins:
   - jekyll-include-cache
+accent_image: /assets/img/sidebar-bg.jpg
+accent_color: rgb(79,177,186)
+theme_color:  rgb(25,55,71)
+font:         Noto Sans, Helvetica, Arial, sans-serif
+font_heading: Roboto Slab, Helvetica, Arial, sans-serif
+google_fonts: Roboto+Slab:700|Noto+Sans:400,400i,700,700i
+
