--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@
 lang:                  en
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title:                 Hydejack
+title:                 Wenxi Li
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
@@ -38,7 +38,7 @@ description:           >
   Hydejack is a boutique Jekyll theme for hackers, nerds, and academics,
   with a focus on personal sites that are meant to impress.
 # A shorter description for the sidebar.
-tagline:               Change `tagline` in `_config.yml`
+tagline:               DS Professional
 
 # A list of keywords for your blog
 keywords:              []
@@ -51,18 +51,18 @@ logo:                  /assets/img/logo.png
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
-  name:                <firstname> <lastname>
-  email:               <mail@domain.tld>
+  name:                <Wenxi> <Li>
+  email:               <arielliwenxi@gmail.com>
   # # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
 # Add links to the sidebar.
 menu:
-  - title:             Example
+  - title:             Resume
     url:               /example/
-  - title:             Documentation
+  - title:             Projects
     url:               /docs/
-  - title:             About
+  - title:             About me
     url:               /about/
 
 # Add links to the footer.
