--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,3 @@
-#remote_theme: hydecorp/hydejack@v9.1.4
-#plugins:
-#  - jekyll-include-cache
-#accent_image: /assets/img/sidebar-bg.jpg
-#accent_color: rgb(79,177,186)
-#theme_color:  rgb(25,55,71)
-#font:         Noto Sans, Helvetica, Arial, sans-serif
-#font_heading: Roboto Slab, Helvetica, Arial, sans-serif
-#google_fonts: Roboto+Slab:700|Noto+Sans:400,400i,700,700i
-
 # Config
 # ========================================================================================
 
@@ -30,14 +20,16 @@
 lang:                  en
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title:                 Wenxi Li
+title:                 Starter Kit
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  Welcome to Wenxi's website.
+  Hydejack is a boutique Jekyll theme for hackers, nerds, and academics,
+  with a focus on personal sites that are meant to impress.
+
 # A shorter description for the sidebar.
-tagline:               DS Professional
+tagline:               Change `tagline` in `_config.yml`
 
 # A list of keywords for your blog
 keywords:              []
@@ -50,18 +42,18 @@ logo:                  /assets/img/logo.png
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
-  name:                <Wenxi> <Li>
-  email:               <arielliwenxi@gmail.com>
+  name:                <firstname> <lastname>
+  email:               <mail@domain.tld>
   # # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
 # Add links to the sidebar.
 menu:
-  - title:             Resume
+  - title:             Example
     url:               /example/
-  - title:             Projects
+  - title:             Documentation
     url:               /docs/
-  - title:             About me
+  - title:             About
     url:               /about/
 
 # Add links to the footer.
@@ -88,8 +80,8 @@ paginate_path:         /:num/
 # Theme
 # ---------------------------------------------------------------------------------------
 
-# theme: jekyll-theme-hydejack
-remote_theme: hydecorp/hydejack@v9
+theme: jekyll-theme-hydejack
+# remote_theme: hydecorp/hydejack@v9.0.0-rc.6
 
 
 # Customizaton
@@ -168,7 +160,7 @@ defaults:
         type:          WebPage
 
 kramdown:
-  math_engine:         katex
+  math_engine:         mathjax
   math_engine_opts:    {}
   footnote_backlink:   '&#x21a9;&#xfe0e;'
 
