--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ author:
 # Add links to the sidebar.
 menu:
   - title:             About me
-    url:               /example/
+    url:               /About me/
   - title:             Projects
     url:               /docs/
   - title:             More about me
