--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,17 +2,14 @@
 # Must be the same as `author` in `_config.yml`.
 # Change `author1` to your shortname.
 author1:
-  name:              <firstname> <lastname>
-  email:             <mail@domain.tld>
+  name:              <Wenxi> <Li>
+  email:             <arielliwenxi@gmail.com>
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    
-    Open `_data/authors.yml` to edit this text.
+    I'm a data science professional with with solid machine learning background and business acumen.
+    My past research and work experience across multiple fields helped me enhance modeling and analytics skills and build a problem-solving mindset.
   # This photo will be used in the about section
   picture:
     path:            https://placehold.it/128x128
@@ -27,7 +24,7 @@ author1:
   social:
     twitter:         <username>
     github:          <username>
-    # email:           <mail@domain.tld>
+    email:           <arielliwenxi@gmail.com>
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
     # google:          <number>
@@ -56,7 +53,7 @@ author1:
     # npm:             <username>
     # hackernews:      <username>
     # trello:          <firstnamelastname>
-    # linkedin:        <firstname-lastname-string>
+    linkedin:        <wenxi-li>
     # xing:            <firstname_lastname_counter>
     # blogger:         <number>
     # delicious:       <username>
