--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,7 @@ title:                 Wenxi(Ariel) Li
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  Hydejack is a boutique Jekyll theme for hackers, nerds, and academics,
-  with a focus on personal sites that are meant to impress.
+  Graduated from two top engineering schools in the world and in China.
 
 # A shorter description for the sidebar.
 tagline:               Welcome to my website
