--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -23,8 +23,8 @@ author1:
   # Rearrange to change the order in which they appear
   social:
     twitter:         <username>
-    github:          <username>
-    email:           <arielliwenxi@gmail.com>
+    github:          ArieldaVinci
+    email:           arielliwenxi@gmail.com
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
     # google:          <number>
@@ -53,7 +53,7 @@ author1:
     # npm:             <username>
     # hackernews:      <username>
     # trello:          <firstnamelastname>
-    linkedin:        <wenxi-li>
+    linkedin:        wenxi-li
     # xing:            <firstname_lastname_counter>
     # blogger:         <number>
     # delicious:       <username>
