--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -11,8 +11,8 @@ author1:
     I'm a data science professional with with solid machine learning background and business acumen.
     My past research and work experience across multiple fields helped me enhance modeling and analytics skills and build a problem-solving mindset.
   # This photo will be used in the about section
-  picture:
-    path:            /assets/profile.jpg
+  #picture:
+  #  path:            /assets/profile.jpg
     # srcset is optional, but can be used to provide higher res versions for retina displays
     #srcset:
       #1x:            https://placehold.it/128x128
