--- a/_config.yml
+++ b/_config.yml
@@ -54,8 +54,8 @@ menu:
     url:               /blogs/
   - title:             Projects
     url:               /projects/
-  - title:             More about me
-    url:               /docs/
+  - title:             Resume
+    url:               /resume/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
