--- a/_config.yml
+++ b/_config.yml
@@ -85,8 +85,7 @@ paginate_path:         /blog/:num/
 # Theme
 # ---------------------------------------------------------------------------------------
 
-theme: jekyll-theme-hydejack
-# remote_theme: hydecorp/hydejack@v9
+remote_theme: hydecorp/hydejack@v9.1.4
 
 destination: build
 
